# lingua-wasm

./: .gitignore  Cargo.toml  LICENSE.md  deno.json  mod.ts  testing.ts
.github/workflows/: build-wasm.yml
pkg/: README.md  lingua_wasm.d.ts  lingua_wasm.js  lingua_wasm_bg.js  lingua_wasm_bg.wasm.d.ts  package.json
src/: lib.rs  utils.rs  worker.js
