[package]
name = "lingua-wasm"
version = "0.1.0"
authors = ["Siddharth Singh <me@shantaram.xyz>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/xyzshantaram/lingua-wasm"
description = "WASM build of lingua-wasm for use in TypeScript projects"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
lingua = "1.6.2"
lazy_static = "1.5.0"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.76"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[unstable]
build-std = ["std", "panic_abort", "core", "alloc"]
build-std-features = ["panic_immediate_abort"]
